2009-04-06  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/abswordseg.h (AbsWordSeg::Has_Karun):
	Declare another utility function as static member.
	* src/abswordseg.cpp (AbsWordSeg::Has_Karun):
	Replace negative number literal with hexadecimal code, for readability.

2008-12-17  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/abswordseg.cpp (AbsWordSeg::CreateWordList):
	Remove unnecessary 'continue'.

2008-12-17  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/abswordseg.h
	(AbsWordSeg::IsLeadChar, IsLastChar, IsNumber, IsEnglish):
	Declare utility functions as static members.
	* src/abswordseg.cpp (AbsWordSeg::IsNumber, IsEnglish):
	Replace code with simpler equivalence.
	* src/abswordseg.cpp (AbsWordSeg::GetBestSen):
	Get rid of unnecessary assignment and strcat().

2008-12-17  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Get rid of the unnecessary src/dictpath.cpp.

	* src/Makefile.am, -src/dictpath.cpp: Remove dictpath.cpp.
	* src/dictpath.h (d2triepath), src/wordseg.cpp (InitWordSegmentation):
	Get rid of the unnecessary global variable 'd2triepath', which is in
	fact only needed locally.

2008-12-17  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Switch to libdatrie. (Requires libdatrie >= 0.1.99.2)

	* configure.in: Post-release version bump.

	* configure.in: Check for 'trietool-0.2' program (under --enable-dict)
	and 'datrie-0.2' pkg-config.
	* configure.in, Makefile.am: Exclude 'misc', 'vmem', and 'trie' subdirs.

	* src/abswordseg.h:
	  - Replace 'AbsWordSeg::MyDict' member with libdatrie's 'Trie'
	* src/abswordseg.cpp (AbsWordSeg::AbsWordSeg):
	  - Don't delete 'MyDict' in c-tor
	* src/abswordseg.cpp (AbsWordSeg::CreateWordList):
	  - Replace calls to old 'Trie' class with corresponding libdatrie
	    functions
	  - Adjust loop so that terminating '\0' is not walked

	* src/longwordseg.h, src/longwordseg.cpp
	  (LongWordSeg::LongWordSeg, ~LongWordSeg):